--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
 </head>
 
 <body>
-    <div class="container mt-2">
+    <div class="container border border-secondary border-opacity-50 mt-2 shadow-sm p-4">
         <!-- <div class="d-flex"> -->
         <!-- <div class="flex-grow-1 bg-light rounded-2 p-2 me-1 w-50"> -->
+        <nav class="navbar bg-light ps-2 rounded-2">
+            <h1>Profile</h1>
+        </nav>
 
-        <h1>Profile</h1>
-        <h5>Personal information</h5>
+        <div class="p-3 mt-2 bg-dark bg-opacity-75 text-white rounded-1 border-light">
+            <h5>Personal information</h5>
+        </div>
         <div class="d-flex pt-2">
             <table class="table table-bordered table-striped flex-grow-2 me-3">
                 <thead>
@@ -33,7 +37,7 @@
                 <tbody>
                     <tr>
                         <th scope="row">name</th>
-                        <td>김남현 (Kim Nam Hyeon)</td>
+                        <td><span class="korean">김남현</span> (Kim Nam Hyeon)</td>
                     </tr>
                     <tr>
                         <!-- 소속 -->
@@ -58,7 +62,13 @@
             </table>
 
             <!-- flex box 써서 이미지는 왼쪽에 취미나 약력들은 오른쪽에 위치하게-->
-            <img id="profile_img" src="photo.png" class="rounded-2 flex-grow-1">
+            <div class="card" style="width: 18rem;">
+                <img id="profile_img" src="photo.png" class="rounded-2 flex-grow-1 card-img-top" alt="profile image">
+                <div class="card-body">
+                    <p class="card-text korean text-center">2022.07.16.<br>수원월드컵경기장</p>
+                </div>
+            </div>
+
         </div>
 
 
@@ -73,10 +83,6 @@
 
 
     </div>
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
