--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="container border border-secondary border-opacity-50 mt-2 shadow-sm p-4">
+    <div class="container border border-secondary border-opacity-50 mt-2 shadow-sm p-3">
         <!-- <div class="d-flex"> -->
         <!-- <div class="flex-grow-1 bg-light rounded-2 p-2 me-1 w-50"> -->
         <nav class="navbar bg-light ps-2 rounded-2">
@@ -27,7 +27,7 @@
             <h5>Personal information</h5>
         </div>
         <div class="d-flex pt-2">
-            <table class="table table-bordered table-striped flex-grow-2 me-3">
+            <table class="table table-bordered table-striped flex-grow-1 me-3">
                 <thead>
                     <tr>
                         <th scope="col">Attribute</th>
@@ -62,8 +62,8 @@
             </table>
 
             <!-- flex box 써서 이미지는 왼쪽에 취미나 약력들은 오른쪽에 위치하게-->
-            <div class="card" style="width: 18rem;">
-                <img id="profile_img" src="photo.png" class="rounded-2 flex-grow-1 card-img-top" alt="profile image">
+            <div class="card flex-grow-1" style="width: 30%;">
+                <img id="profile_img" src="photo.png" class="rounded-2 card-img-top" alt="profile image">
                 <div class="card-body">
                     <p class="card-text korean text-center">2022.07.16.<br>수원월드컵경기장</p>
                 </div>
